Fix Code review changes Use list for technology and skills wrap images inside card and use flexbox to align it Re-adjust the Grid for correct layout

--- a/style.css
+++ b/style.css
@@ -85,26 +85,16 @@
 
 .grid-container {
   display: grid;
-  grid-template-rows: repeat(8, auto);
+  grid-template-rows: repeat(4, auto);
   justify-items: center;
   margin-top: 10vh;
 }
 
-.img-container {
-  background-color: #fff;
-  padding-top: 2vh;
-  padding-left: 2vh;
-  padding-right: 2vh;
-  border-top-left-radius: 2vh;
-  border-top-right-radius: 2vh;
-}
-
 .card {
   background-color: #fff;
-  margin-left: 6vw;
+  border-radius: 2vh;
+  margin-left: 2.7vh;
   margin-right: 2.7vh;
-  border-bottom-left-radius: 2vh;
-  border-bottom-right-radius: 2vh;
   margin-bottom: 10vh;
 }
 
@@ -112,11 +102,14 @@
   display: flex;
   flex-direction: column;
   padding-left: 2vh;
-  height: 37vh;
+  padding-top: 2vh;
+  padding-bottom: 4.5vh;
 }
 
-.multipost > .card-element {
-  height: 44vh;
+.img-container {
+  background-color: #fff;
+
+  /* padding-top: 2vh; */
 }
 
 .card-title {
